--- a/sass/features-main.scss
+++ b/sass/features-main.scss
@@ -1,32 +1,37 @@
 .features-main {
-
-  display: inline-block;
-  width: 320px;
-  mi-height: 100px;
-  margin-top: -30px;
+ position: relative;
+ height: 206px;
 }
 
-.features-main__link-one {
-  display: inline-block;
-  position: relative;
-  width: 320px;
-  height: 100px;
+.features-main__link {
+  display: block;
+  position: absolute;
+
+  width: 100%;
+  height: 103px;
   background: #63d1bb;
   color: white;
   text-decoration: none;
 }
-.features-main__link-one:hover {
+.features-main__link--one {
+
+  bottom: -125px;
+}
+.features-main__link--two {
+  bottom: -23px;
+}
+.features-main__link:hover {
   background: #59d5bc;
 
   }
-.features-main__link-one img {
+.features-main__link img {
   position: absolute;
   top: 20px;
   left: 245px;
   opacity: 0.2;
 }
 
-.features-main__link-one span {
+.features-main__link span {
   font-size: 19px;
   font-weight: 600;
   line-height: 24px;
@@ -34,31 +39,3 @@
   top: 20px;
   left: 30px;
 }
-.features-main__link-two {
-  display: inline-block;
-  margin-top: -5px;
-  position: relative;
-  width: 320px;
-  height: 100px;
-  background: #56c3b2;
-  color: white;
-  text-decoration: none;
-}
-.features-main__link-two:hover {
-  background: #46c1ae;
-}
-.features-main__link-two img {
-  position: absolute;
-  top: 20px;
-  left: 230px;
-  opacity: 0.2;
-}
-.features-main__link-two span {
-  font-size: 19px;
-  font-weight: 600;
-  line-height: 24px;
-  position: absolute;
-  top: 20px;
-  left: 30px;
-}
-
