--- a/sass/main-nav.scss
+++ b/sass/main-nav.scss
@@ -1,35 +1,32 @@
 .main-nav {
-  margin-top: 15px;
+  position: absolute;
+  z-index: 0;
+  background-color: #fff;
+  top: 12%;
+
 }
-.main-nav__switch {
-  display: block;
-  background-color: transparent;
-  font-size: 0;
-  background-image: url("../img/icon-menu-open.svg");
-  width: 23px;
-  height: 14px;
-  border: 0;
-  outline: 0;
-  margin-left: 240px;
-  margin-top: -55px;
-}
+
 .main-nav__links {
-  display: inline-block;
-  margin-bottom: -1px;
+  display: block;
+  margin-left: -30px;
   list-style: none;
+   margin-top: 0;
+  margin-bottom: 0;
 }
+
 .main-nav__link a:hover {
   opacity: 0.5;
 }
+
 .main-nav__link a:active {
   opacity: 0.2;
 }
+
 .main-nav__link a {
   display: block;
   text-decoration: none;
   color: black;
   font-weight: 600;
-
   font-size: 17px;
   line-height: 24px;
   text-align: left;
@@ -38,8 +35,10 @@
   border-left: 0;
   border-right: 0;
   border-bottom: 0;
-  width: 245px;
-  margin-left: -40px;
-
+  width: 235px;
 }
 
+.main-nav__wrapper {
+
+
+}
