--- a/sass/page-header.scss
+++ b/sass/page-header.scss
@@ -1,7 +1,31 @@
+page-header__logo {
+  position: relative;
+}
 .page-header__logo img {
   display: block;
-  margin: 22px auto;
-  margin-bottom: 30px;
+  margin: 0 auto;
+
+
+}
+.page-header {
+
+  padding: 21px 0;
+  border-top: 1px solid #ececec;
+
+}
+.page-header__switch {
+  display: block;
+  background-color: transparent;
+  font-size: 0;
+  background-image: url("../img/icon-menu-open.svg");
+  width: 23px;
+  height: 14px;
+  border: 0;
+  outline: 0;
+  position: absolute;
+  top: 30px;
+  left: 320px;
+
 }
 .page-header__logo img:hover {
   opacity: 0.5;
@@ -9,3 +33,15 @@
 .page-header__logo img:active {
   opacity: 0.2;
 }
+
+.page-header__search {
+  display: none;
+}
+/*
+@media (min-width: 768px) {
+
+  .page-header__search {
+ display: block;
+}
+}
+*/
