--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,22 +16,54 @@
 
 
 
+@font-face {
+  font-family: "Open Sans";
+  src: url(../fonts/opensans.woff) format('woff'), url(../fonts/opensans.woff2) format('woff2');
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: "Open Sans";
+  src: url(../fonts/opensansbold.woff) format('woff'), url(../fonts/opensansbold.woff2) format('woff2');
+  font-weight: 700;
+}
+
 body {
   background: white;
-  width: 320px;
+  min-width: 320px;
   min-height: 1000px;
   font-family: "Open Sans", "Arial", sans-serif;
+}
 
-}
 .container {
-  width: 260px;
+  width: 320px;
   margin: 0 auto;
-  padding: 0 30px;
 }
+
+@media (min-width: 768px) {
+  /*
+  .container {
+  width: 670px;
+  margin: 0 auto;
+  padding: 0 50px;
+}
+  */
+}
+
+@media (min-width: 1150px) {
+  /*
+  .container {
+  width: 1050px;
+  margin: 0 auto;
+  padding: 0 50px;
+}
+  */
+}
+
 .clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .topic {
@@ -56,17 +88,15 @@ body {
   background: 0;
   text-transform: uppercase;
 }
+
 .btn:hover {
   background: #444444;
   color: white;
   border: 2px solid #444444;
 }
+
 .btn:active {
   background: #444444;
   color: #8d8d8d;
   border: 2px solid #444444;
 }
-
-
-
-
