--- a/sass/title.scss
+++ b/sass/title.scss
@@ -1,27 +1,28 @@
 
 .title {
   position: relative;
+  text-align: center;
 }
 .title__image {
 
-  display: inline-block;
-  background-color: #fbfbfb;
+  display: block;
 
-  background-size: 320px 285px;
-  background: url("../img/hero-mobile@1x.jpg") no-repeat #fbfbfb;
-  background-position: center;
+  background: url("../img/hero-mobile@1x.jpg") no-repeat #F9F9F9;
+  background-position: center top;
+  height: 505px;
+
+  border-top: 1px solid #ececec;
+  padding-top: 82px;
+  box-sizing: border-box;
 }
 
 .title__main {
 
-  position: absolute;
+  display: block;
+
   font-size: 27px;
   line-height: 30px;
-  font-weight: 600;
-
-  top: 45px;
-  left: 50px;
-
+  font-weight: 700;
   text-align: center;
 
 }
