--- a/sass/features-main.scss
+++ b/sass/features-main.scss
@@ -1,6 +1,8 @@
 .features-main {
  position: relative;
  height: 206px;
+  margin-top: -331px;
+  margin-bottom: 160px;
 }
 
 .features-main__link {
