--- a/sass/page-header.scss
+++ b/sass/page-header.scss
@@ -1,30 +1,17 @@
-page-header__logo {
+.page-header__logo {
+
   position: relative;
 }
 .page-header__logo img {
   display: block;
   margin: 0 auto;
 
-
 }
 .page-header {
-
+  width: 320px;
   padding: 21px 0;
   border-top: 1px solid #ececec;
 
-}
-.page-header__switch {
-  display: block;
-  background-color: transparent;
-  font-size: 0;
-  background-image: url("../img/icon-menu-open.svg");
-  width: 23px;
-  height: 14px;
-  border: 0;
-  outline: 0;
-  position: absolute;
-  top: 30px;
-  left: 320px;
 
 }
 .page-header__logo img:hover {
