--- a/sass/title.scss
+++ b/sass/title.scss
@@ -1,10 +1,11 @@
 
 .title {
-  position: relative;
+  width: 100%;
   text-align: center;
 }
 .title__image {
-
+  position: relative;
+  width: 100%;
   display: block;
 
   background: url("../img/hero-mobile@1x.jpg") no-repeat #F9F9F9;
@@ -12,17 +13,20 @@
   height: 505px;
 
   border-top: 1px solid #ececec;
-  padding-top: 82px;
+  /*padding-top: 82px;*/
   box-sizing: border-box;
 }
 
 .title__main {
-
+  width: 100%;
+  position: absolute;
   display: block;
-
+  left: 0px;
+  top: 160px;
   font-size: 27px;
   line-height: 30px;
   font-weight: 700;
   text-align: center;
+  margin: 0 auto;
 
 }
