--- a/sass/contacts.scss
+++ b/sass/contacts.scss
@@ -1,3 +1,6 @@
+.contacts {
+  padding: 0 30px;
+}
 .contacts b {
   display: block;
   font-size: 18px;
@@ -12,7 +15,7 @@
   line-height: 30px;
 }
 .contacts__table-right {
-padding-right: 42px;
+padding-right: 10px;
   width: 60px;
   display: block;
 }
