--- a/sass/main-nav.scss
+++ b/sass/main-nav.scss
@@ -2,7 +2,7 @@
   position: absolute;
   z-index: 0;
   background-color: #fff;
-  top: 15%;
+  top: 80px;
 }
 
 .main-nav__links {
@@ -25,7 +25,7 @@
   display: block;
   text-decoration: none;
   color: black;
-  font-weight: 600;
+  font-weight: 700;
   font-size: 17px;
   line-height: 24px;
   text-align: left;
